themes/vantage/trunk/style.less
/* ... */
/* =Navigation
----------------------------------------------- */

.pagination, .entry-content .pagination {
	position:relative;
	font-size:11px;
	line-height:13px;
	text-align: right;

	span, a {
		.rounded(2px);
		display:inline-block;
		margin: 2px 2px 2px 0;
		padding:6px 9px 5px 9px;
		text-decoration:none;
		width:auto;
		background: #4f5355;

		.bordered(#d2d2d2, #c3c3c3, #9f9f9f, #c3c3c3);
		.gradient(#FFFFFF, #dfdfdf, #FFFFFF);
		.rounded(3px);
		font-weight: bold;
		color: #646464;

		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125), inset 0 1px 0 rgba(255, 255, 255, 0.5)");
		width: auto;
		text-decoration: none;

		&:last-child {
			margin-right: 0;
		}


	}

	a:hover {
		.gradient(#F0F0F0, #D0D0D0, #F0F0F0);
		color: #606060;
	}

	.current {
		.bordered(#222222, #222222, #222222, #222222);
		.gradient(#333333, #505050, #333333);
		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125), inset 0 0 5px rgba(0,0,0, 0.5)");
		color: #EFEFEF;
	}
}

.site-content {

	.nav-previous {
		float: left;
		width: 50%;
	}

	.nav-next {
		float: right;
		text-align: right;
		width: 50%;
	}

}

/* =Comments
----------------------------------------------- */

#comments-title, #reply-title {
	display: inline-block;
	font-size: 14px;
	margin-bottom: 20px;
	font-weight: 500;
	line-height: 1em;
	color: #444444;
	padding-bottom: 5px;
	border-bottom: 2px solid #555555;

	[class^="icon-"] {
		font-size: 16px;
		display: inline-block;
		margin-right: 4px;
		line-height: 0.75em;
	}
}

#comments {

	.commentlist {
		margin: 0 0 40px 0;
		list-style: none;

		.children {
			list-style: none;
			margin-left: 75px;
		}

		article {
			margin-bottom: 35px;

			.avatar {
				float: left;
				.rounded(3px);
				.box-shadow(~"0 1px 2px rgba(0,0,0,0.1)");
			}

			.comment-author, .awaiting-moderation, .comment-meta, .comment-content {
				margin-left: 75px;
			}

			.comment-author{
				color: #474747;
				font-size: 13px;
				font-weight: 500;
				line-height: 1em;
				margin-bottom: 0.35em;

				a{
					color: inherit;
					text-decoration: none;
				}

				cite {
					font-style: normal;
				}
			}

			.comment-meta {
				font-size: 11.5px;
				color: #747474;
				line-height: 1em;
				margin-bottom: 15px;

				a{
					color: inherit;
					text-decoration: none;
				}

				.support {
					display: inline-block;
					margin-left: 15px;
				}
			}

			.awaiting-moderation {
				display: block;
				margin-bottom: 10px;
			}

			.entry-content {
				font-size: 12px;
			}
		}

		.bypostauthor{
			/* Change the comment by the post author */
		}
	}
}

#commentform{

	label {
		margin-top: 2px;
		display:block;
		float: left;
		width: 25%;
	}

	input, textarea {
		float: left;
		width: 75%;
		padding: 10px;
		font-size: 13px;
	}

	textarea {
		padding: 10px;
	}

	input {
		padding: 7px 10px;
	}


	p {
		.clearfix();
		margin-bottom: 20px
	}

	p.form-submit {
		margin-bottom: 0;
	}

	#submit {
		width: auto;
		font-size: 12px;
		padding: 10px 20px;
	}

	.form-allowed-tags, .form-allowed-tags code, .comment-notes {
		font-size: 0.8em;
		color: #999;
	}

	.logged-in-as{
		font-size: 0.8em;
		color: #999;
		margin-bottom: 10px;
		text-align: right;
	}

	.required {
		color: #A40802;
	}
}

@media (max-width:480px) {
	body.responsive  #commentform{
		label{
			float: none;
			width: 100%;
			margin-bottom: 3px;
		}

		input, textarea {
			float:none;
			width: 100%;
		}
	}
}



/* =Sidebars and Asides
----------------------------------------------- */

#colophon {
	margin-bottom: 20px;
	background: #2f3033;
	padding: 30px;

	#theme-attribution, #site-info {
		text-align: center;
		margin-top: 25px;
		color: #AAAAAA;
		font-size: 11.5px;

		a {
			color: #DDDDDD;
			text-decoration: none;
			font-weight: 500;
		}
	}
}

body.layout-full{
	/* Use the same color as the footer */
	background-color: #2f3033;
}

.layout-full {
	#colophon {
		margin-bottom: 0;
		margin-top: 0;
		padding-top: 30px;
		padding-bottom: 30px;
	}
}

#scroll-to-top {
	position: fixed;
	bottom: 20px;
	right: 20px;
	width: 48px;
	height: 48px;
	background: url(./images/sprites/to-top.png);

	@media screen and (-webkit-min-device-pixel-ratio: 2) {
		& {
			background-image: url(./images/retina/to-top.png);
			background-size: 48px 48px;
		}
	}

	-ms-transform: scale(0, 0);
	-webkit-transform: scale(0, 0);
	transform: scale(0, 0);
	opacity: 0;

	.transition(0.2s);

	&.displayed {
		-ms-transform: scale(1, 1);
		-webkit-transform: scale(1, 1);
		transform: scale(1, 1);
		opacity: 1 !important;
	}

}

@import "less/slider";
@import "less/widgets";
@import "less/loops";
@import "less/woocommerce";

